--- a/resources/sass/faq.sass
+++ b/resources/sass/faq.sass
@@ -18,23 +18,26 @@
 
 	overflow: hidden
 	transition: all .25s ease-in-out
-	&:after
-		content: ''
-		display: block
-		height: 0
-		width: 0
-		border-style: solid
-		border-width: 6px 5px 0px 5px
-		border-color: #ffffff transparent transparent transparent
-		position: absolute
-		right: 13px
-		top: 35px
-		
-		transition: all .25s ease-in-out
+	
 	.faq-question
 		margin-bottom: 20px
 		cursor: pointer
 		user-select: none
+
+		overflow: visible
+		&:after
+			content: ''
+			display: block
+			height: 0
+			width: 0
+			border-style: solid
+			border-width: 6px 5px 0px 5px
+			border-color: #ffffff transparent transparent transparent
+			position: absolute
+			right: 13px
+			top: 35px
+			
+			transition: all .25s ease-in-out
 	.faq-answer
 		max-height: 0
 		transition: all .25s ease-in-out
@@ -43,10 +46,10 @@
 		border: none
 		padding-left: 32px
 		padding-bottom: 20px
-		&:after
-			transform: rotate(180deg)
 		.faq-question
 			color: #fff
 			font-weight: 700
+			&:after
+				transform: rotate(180deg)
 		.faq-answer
 			max-height: 1000px
